# DatteBot

./: main.py  pyproject.toml
cogs/: 8Ball.py  Avatar.py  Calculations.py  ChatBot.py  CoinToss.py  CooldownError.py  Help.py  Mention.py  Music.py  Ping.py  Purge.py  RockPaperScissors.py  Say.py  cogstructure  images.py
cogs/ChatBot_API/: ChatBot.py
cogs/Moderation/Purge/: Hakai.py
cogs/images/: images.py
